Add aggregate rating and igdb rating feature
